--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 		<link rel="stylesheet" href="styles.css" />
 		<script src="script.js" defer></script>
 	</head>
-	<body></body>
+	<body>
+		<button>CLICK ME</button>
+	</body>
 </html>
