HTML - button onclick=changeColor()

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 		<script src="script.js" defer></script>
 	</head>
 	<body>
-		<button>CLICK ME</button>
+		<button onclick="changeColor()">CLICK ME</button>
 	</body>
 </html>
